<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/opc_aniadirNota" android:id="@+id/menuMainItemAniadirNota" android:icon="@android:drawable/ic_menu_add"/>
    <item android:title="@string/opc_mandarCorreo" android:id="@+id/menuMainItemMandarCorreo" android:icon="@android:drawable/ic_dialog_email"/>
    <item android:title="@string/opc_aniadirAmigo" android:id="@+id/menuMainItemAniadirAmigo" android:icon="@android:drawable/ic_menu_agenda"/>
    <item android:title="@string/opc_aniadirCita" android:id="@+id/menuMainItemAniadirCita" android:icon="@android:drawable/ic_menu_my_calendar"/>
    <item android:title="@string/opc_acercaDe" android:id="@+id/menuMainItemAcercaDe" android:icon="@android:drawable/ic_dialog_info"/>
</menu>