<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AniadirAmigoActivity">

    <TextView
            android:layout_width="127dp"
            android:layout_height="39dp" android:id="@+id/txtAniadirAmigoNombre"
            android:text="@string/txt_nombreContacto" android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="68dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.253"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTxtAniadirAmigoTelefono" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtAniadirAmigoTlf" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.562"
            android:textSize="24sp"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTxtAniadirAmigoNombre"
            android:textSize="24sp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/txtAniadirAmigoNombre"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.562"/>
    <Button
            android:text="@string/btn_aniadir"
            android:layout_width="161dp"
            android:layout_height="61dp" android:id="@+id/btnAniaditAmigoAniadir"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTxtAniadirAmigoTelefono"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.776" app:layout_constraintVertical_bias="0.043"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/txt_telfContacto"
            android:layout_width="177dp"
            android:layout_height="40dp" android:id="@+id/txtAniadirAmigoTlf"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.307"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/editTxtAniadirAmigoNombre"/>
</androidx.constraintlayout.widget.ConstraintLayout>