<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AniadirCitaActivity">

    <Button
            android:layout_width="112dp"
            android:layout_height="50dp" android:id="@+id/btnAniadirCitaAniadir"
            android:text="@string/btn_aniadir"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.829" android:textSize="18sp"/>
    <TextView
            android:text="@string/txt_cita"
            android:layout_width="140dp"
            android:layout_height="25dp" android:id="@+id/txtAniadirCitaCita"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextAniadirCitaCita"
            app:layout_constraintHorizontal_bias="0.202"/>
    <EditText
            android:layout_width="305dp"
            android:layout_height="32dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editTextAniadirCitaDescripcion"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="4dp" app:layout_constraintBottom_toTopOf="@+id/btnAniadirCitaAniadir"
            app:layout_constraintHorizontal_bias="0.518"/>
    <TextView
            android:text="@string/txt_descripcion"
            android:layout_width="204dp"
            android:layout_height="23dp" android:id="@+id/txtAniadirCitaDescripcion"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.265"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextAniadirCitaDescripcion"/>
    <EditText
            android:layout_width="305dp"
            android:layout_height="44dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editTextAniadirCitaCita"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtAniadirCitaDescripcion"
            app:layout_constraintHorizontal_bias="0.518"/>
    <CalendarView
            android:layout_width="303dp"
            android:layout_height="332dp" android:id="@+id/calAniadirCitaCalendario"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/txtAniadirCitaCita" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintVertical_bias="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>